--- a/marker_based/index.html
+++ b/marker_based/index.html
@@ -25,11 +25,11 @@
         <a-entity id="snow" position="0 6 -15" particle-system="color: #1DFF0A"></a-entity>
 
         <a-marker preset="hiro">
-            <a-entity id="cube" geometry="primitive: box; width: 0.4; depth: 0.3; height: 0.4" position="0 0 0"
+            <a-entity id="box" geometry="primitive: box; width: 0.4; depth: 0.3; height: 0.4" position="2 0 2"
                       material="color: #E7DD44"></a-entity>
-            <a-entity id="cylinder" geometry="primitive: cylinder;  height: 0.4; radius: 0.3" position="-0.5 0 0"
+            <a-entity id="cylinder" geometry="primitive: cylinder;  height: 0.4; radius: 0.3" position="-0.5 2 0"
                       material="color: #E44FEE"></a-entity>
-            <a-entity id="sphere" geometry="primitive: sphere; radius: 0.2" position="0.5 0 0"
+            <a-entity id="sphere" geometry="primitive: sphere; radius: 0.2" position="0.5 -1 -1"
                       material="color:#ECEE4F"></a-entity>
 
         </a-marker>
